GPSLink - Customer changes
- remove vendor_id
- added customer_code
- update vehicle endpoint
- update approve vehicle endpoint
